# wazuh-dfn

./: .buildinfo  .bumpversion.toml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  about.html  architecture.html  build.sh  configuration.html  contributing.html  genindex.html  health.html  index.html  installation.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  test_actual_health.py  troubleshooting.html  usage.html
.doctrees/: about.doctree  architecture.doctree  configuration.doctree  contributing.doctree  environment.pickle  health.doctree  index.doctree  installation.doctree  troubleshooting.doctree  usage.doctree
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: bandit.yml  github-pages.yml  python-release.yml
_sources/: about.rst.txt  architecture.rst.txt  installation.rst.txt  troubleshooting.rst.txt
docs/: about.rst  architecture.rst  conf.py  configuration.rst  contributing.rst  health.rst  index.rst  installation.rst  requirements.txt  testing.md  troubleshooting.rst  usage.rst
docs/_static/: custom.css
sample/: config.min.yaml  config.sample.yaml
scripts/: build.bat  build.sh  check-updates.bat  check-updates.sh  check_tests.py  import_checker.py  lint-test.bat  lint.bat  lint.sh  update-deps.bat  update-deps.sh
src/wazuh_dfn/: __init__.py  __main__.py  config.py  exceptions.py  main.py  max_size_queue.py  service_container.py  validators.py
src/wazuh_dfn/health/: __init__.py  api_server.py  builders.py  event_service.py  health_service.py  models.py  protocols.py
src/wazuh_dfn/health/api/: __init__.py  handlers.py  middleware.py  rate_limiter.py  server.py
src/wazuh_dfn/services/: __init__.py  alerts_service.py  alerts_watcher_service.py  alerts_worker_service.py  file_json_reader.py  file_monitor.py  file_queue.py  json_queue.py  json_reader.py  kafka_service.py  logging_service.py  max_size_queue.py  wazuh_service.py
src/wazuh_dfn/services/handlers/: __init__.py  syslog_handler.py  windows_handler.py
test/: lin_fail2ban-2.json  lin_fail2ban-4.json  test_alerts_watcher_service.py  test_alerts_worker_service.py  test_file_queue.py  test_integration.py  test_json_queue.py  test_json_reader.py  test_logging_service.py  test_main.py  test_performance.py  test_windows_handler.py
tests/: README.md  conftest.py  test___main__.py  test_alerts_service.py  test_alerts_watcher_service.py  test_alerts_worker_service.py  test_config.py  test_exceptions.py  test_file_monitor.py  test_integration.py  test_kafka_service.py  test_load_alerts.py  test_logging_service.py  test_main.py  test_max_size_queue.py  test_performance.py  test_service_container.py  test_syslog_handler.py  test_validators.py  test_wazuh_service.py  test_windows_handler.py  win_4625-no-ip.json
tests/health/: test_builders.py  test_event_service.py  test_health_service.py  test_models.py  test_protocols.py
tests/health/api/: test_handlers.py  test_middleware.py  test_rate_limiter.py  test_server.py
tests/integration/: test_api_background.py  test_api_security.py  test_integration.py  test_load_alerts.py
tests/integration/integration_files/: lin_fail2ban-1-SKIP.json  lin_fail2ban-2.json.json.kafka  lin_fail2ban-3.json  lin_fail2ban-3.json.json.kafka  lin_fail2ban-4.json.json.kafka  win_1102.json  win_1102.json.json.kafka  win_4625-no-ip.json.json.kafka  win_4625.json.json.kafka
tests/integration_files/: win_4625.json
tests/performance/: test_performance.py
tests/property_tests/: test_log_config_validators.py  test_misc_config_validators.py  test_property_base.py  test_wazuh_config_validators.py
tests/services/: test_alerts_watcher_service.py  test_alerts_worker_service.py  test_file_monitor.py  test_kafka_service.py  test_max_size_queue.py  test_wazuh_service.py
tests/services/handlers/: test_syslog_handler.py  test_windows_handler.py
